--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel ='stylesheet' href="style.css">
 </head>
 <body>
-    <div class= 'container'>
-
+    <div class="content">
+    <button class="resize">Resize the page</button>
+    <div class= 'container'></div>
     </div>
 </body>
 </html>
