--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link rel ='stylesheet' href="style.css">
 </head>
 <body>
-    <div class="content">
-    <button class="resize">Resize the page</button>
+    <div class="content"></div>
     <div class= 'container'></div>
-    </div>
+    
 </body>
 </html>
